# ayomi

polak_backend/: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  readme.md
polak_backend/polak/: constants.py  core.py  database.py  main.py  models.py  tests.py
