[tool.poetry]
name = "polak-backend"
version = "0.1.0"
description = ""
authors = ["Sven <sven@pelikan-mobility.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlmodel = "^0.0.24"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
